--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom styles */
-
+html,
 body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: none;
   @apply bg-dark text-light;
+  /* Hide scrollbar on all browsers */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
 }
-/* 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+
+/* Webkit (Chrome, Safari, Opera) */
+::-webkit-scrollbar {
+  display: none;
+}
