--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-dark text-light;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   overflow-y: none;
-  @apply bg-dark text-light;
   /* Hide scrollbar on all browsers */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
