refactor: Update LottieAnimation zIndex value, add background color to body, and optimize Hero component

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@ body {
   /* Hide scrollbar on all browsers */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
+  scroll-behavior: smooth;
 }
 
 /* Webkit (Chrome, Safari, Opera) */
