--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  overflow-y: none;
+  overflow-y: auto;
   /* Hide scrollbar on all browsers */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
